fix: add adress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <h1>Daniil Lutsev</h1>
                 <ul class="contacts">
               
-                    <!-- <li>Address: <a href="https://goo.gl/maps/3kyqMyy1urVVRc7F6">Minsk, Belarus</a></li> -->
+                    <li>Address: <a href="https://goo.gl/maps/3kyqMyy1urVVRc7F6">Minsk, Belarus</a></li>
                     <li>Email: <a href="mailto:danlootsev@gmail.com">danlootsev@gmail.com</a> </li>
                     <li>Telegram: <a href="https://t.me/SixStringer436">t.me/SixStringer436</a> </li>
                 </ul>
