fix: delet bad link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum vitae</title>
     <link rel="stylesheet" href="style.css">
-    <link href="" rel="stylesheet">
+
 </head>
 <body>
     <div class="wrapper">
@@ -20,7 +20,7 @@
                     <li>Telegram: <a href="https://t.me/SixStringer436">t.me/SixStringer436</a> </li>
                 </ul>
               </div>
-                <img class='photo' src="./img/Photo.JPG" alt="">
+                <img alt="hi!" class='photo' src="./img/Photo.JPG" alt="">
             </div>
    
         </header>
@@ -66,6 +66,8 @@
                 <p>Level: A2. I can read documentation, literature, watch some films.</p>
             </div>
         </main>
+
+    
     </div>
 </body>
 </html>
