fix: some little fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>Telegram: <a href="https://t.me/SixStringer436">t.me/SixStringer436</a> </li>
                 </ul>
               </div>
-                <img alt="hi!" class='photo' src="./img/Photo.JPG" alt="">
+                <img  class='photo' src="./img/Photo.JPG" alt="hi!">
             </div>
    
         </header>
